--- a/css/main.css
+++ b/css/main.css
@@ -1,3 +1,68 @@
-/*
-	Inserta tu CSS aqui
-*/
+
+body {
+    outline: 1px solid rgba(255,0,0,0.2)
+}
+/* -------------------------------------------------BODY-----*/
+body {
+    font-family: sans-serif;
+    margin: 0;
+    padding: 0;
+    background: #383333;
+}
+
+/* -----------------------------------------------HEADER----*/
+
+header {
+    background: url(../img/grupal.jpg) no-repeat;
+    background-size: cover;
+    min-height: 880px;
+}
+
+header a {
+    text-decoration: none;
+    color: #000000;
+    font-size: 20px;
+}
+header a:hover {
+    opacity: 0.8; 
+    
+}
+header .boton {
+    background: #f4cc84;
+    display: inline-block;
+    padding: 11px 23px;
+    border-radius: 3px;
+    margin-top: 80px;
+}
+header img{
+    margin-top: 100px;
+}
+header ul{
+    list-style: none;
+}
+header ul li{
+    display: inline-block;
+    margin-top: 70px;
+    font-size: 18px;
+    padding-right: 14px;
+}
+/* ---------------------------------------SECTION CONTENIDO----*/
+.contenido {
+    background: #ffffff;
+}
+.contenido img {
+    width: 100%;
+    margin-top: 30px;
+}
+.contenido p{
+    font-weight: bold;
+    margin: 20px 0;
+    font-size: 21px;
+}
+/* ---------------------------------------FOOTER----*/
+footer {
+    padding: 30px; 
+    color: #ffffff;
+    font-size: 16px;
+}
+
