--- a/css/main.css
+++ b/css/main.css
@@ -33,6 +33,8 @@ header .boton {
     padding: 11px 23px;
     border-radius: 3px;
     margin-top: 80px;
+    position: absolute;
+    left: 120px;
 }
 header img{
     margin-top: 100px;
